--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.159.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.159.0/examples/js/controls/PointerLockControls.js"></script>
   <script src="main.js"></script>
+  <div style="position: fixed; top: 10px; left: 10px; color: white; font-size: 20px; z-index: 100;">
+  スコア: <span id="score">0</span><br>
+  タイマー: <span id="timer">60</span>秒
+</div>
+
 </body>
 </html>
