--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
+  <div id="instructions" style="
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1000;
+  user-select: none;">
+  クリックしてゲームを始める
+</div>
+
   <script src="https://cdn.jsdelivr.net/npm/three@0.159.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.159.0/examples/js/controls/PointerLockControls.js"></script>
   <script src="main.js"></script>
