--- a/index.html
+++ b/index.html
@@ -1,33 +1,137 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FPSミニゲーム</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Three.js FPS Test</title>
+<style>
+  body { margin: 0; overflow: hidden; background-color: black; }
+  canvas { display: block; }
+  #instructions {
+    position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+    color: white; font-size: 24px; cursor: pointer;
+    user-select: none;
+  }
+</style>
 </head>
 <body>
-  <canvas id="gameCanvas"></canvas>
-  <div id="instructions" style="
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 24px;
-  cursor: pointer;
-  z-index: 1000;
-  user-select: none;">
-  クリックしてゲームを始める
-</div>
+<div id="instructions">Click to Play</div>
+<canvas id="gameCanvas"></canvas>
 
-  <script src="https://cdn.jsdelivr.net/npm/three@0.159.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.159.0/examples/js/controls/PointerLockControls.js"></script>
-  <script src="main.js"></script>
-  <div style="position: fixed; top: 10px; left: 10px; color: white; font-size: 20px; z-index: 100;">
-  スコア: <span id="score">0</span><br>
-  タイマー: <span id="timer">60</span>秒
-</div>
+<script type="module">
+import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.module.js';
+import { PointerLockControls } from 'https://cdn.jsdelivr.net/npm/three@0.152.0/examples/jsm/controls/PointerLockControls.js';
 
+let camera, scene, renderer, controls;
+let moveForward = false, moveBackward = false, moveLeft = false, moveRight = false;
+let velocity = new THREE.Vector3();
+let prevTime = performance.now();
+
+init();
+animate();
+
+function init() {
+  scene = new THREE.Scene();
+  scene.background = new THREE.Color(0x000000);
+
+  camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
+  camera.position.set(0, 10, 50);
+  camera.lookAt(0, 0, 0);
+
+  renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('gameCanvas') });
+  renderer.setSize(window.innerWidth, window.innerHeight);
+
+  controls = new PointerLockControls(camera, document.body);
+  controls.getObject().position.set(0, 10, 50);
+  scene.add(controls.getObject());
+
+  // 辅助坐标轴
+  const axesHelper = new THREE.AxesHelper(10);
+  scene.add(axesHelper);
+
+  // 光源
+  const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
+  scene.add(ambientLight);
+  const directionalLight = new THREE.DirectionalLight(0xffffff, 1.5);
+  directionalLight.position.set(50, 200, 100);
+  scene.add(directionalLight);
+
+  // 地面
+  const floorGeometry = new THREE.PlaneGeometry(2000, 2000);
+  floorGeometry.rotateX(-Math.PI / 2);
+  const floorMaterial = new THREE.MeshPhongMaterial({ color: 0x303030 });
+  const floor = new THREE.Mesh(floorGeometry, floorMaterial);
+  scene.add(floor);
+
+  // 控制锁定提示
+  const instructions = document.getElementById('instructions');
+  instructions.addEventListener('click', () => {
+    controls.lock();
+  });
+
+  controls.addEventListener('lock', () => {
+    instructions.style.display = 'none';
+  });
+  controls.addEventListener('unlock', () => {
+    instructions.style.display = '';
+  });
+
+  // 键盘事件
+  document.addEventListener('keydown', (event) => {
+    switch(event.code) {
+      case 'ArrowUp':
+      case 'KeyW': moveForward = true; break;
+      case 'ArrowLeft':
+      case 'KeyA': moveLeft = true; break;
+      case 'ArrowDown':
+      case 'KeyS': moveBackward = true; break;
+      case 'ArrowRight':
+      case 'KeyD': moveRight = true; break;
+    }
+  });
+  document.addEventListener('keyup', (event) => {
+    switch(event.code) {
+      case 'ArrowUp':
+      case 'KeyW': moveForward = false; break;
+      case 'ArrowLeft':
+      case 'KeyA': moveLeft = false; break;
+      case 'ArrowDown':
+      case 'KeyS': moveBackward = false; break;
+      case 'ArrowRight':
+      case 'KeyD': moveRight = false; break;
+    }
+  });
+
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth/window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+  });
+}
+
+function animate() {
+  requestAnimationFrame(animate);
+
+  const time = performance.now();
+  const delta = (time - prevTime) / 1000;
+
+  velocity.x -= velocity.x * 10.0 * delta;
+  velocity.z -= velocity.z * 10.0 * delta;
+
+  const direction = new THREE.Vector3();
+  direction.z = Number(moveForward) - Number(moveBackward);
+  direction.x = Number(moveRight) - Number(moveLeft);
+  direction.normalize();
+
+  if (moveForward || moveBackward) velocity.z -= direction.z * 400.0 * delta;
+  if (moveLeft || moveRight) velocity.x -= direction.x * 400.0 * delta;
+
+  controls.moveRight(-velocity.x * delta);
+  controls.moveForward(-velocity.z * delta);
+
+  renderer.render(scene, camera);
+  prevTime = time;
+}
+</script>
 </body>
 </html>
