--- a/index.html
+++ b/index.html
@@ -3,138 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>FPS Game Minimal</title>
-  <style>
-    body { margin: 0; overflow: hidden; background-color: #000; }
-    canvas { display: block; }
-    #instructions {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.8);
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
-      cursor: pointer;
-      user-select: none;
-      z-index: 10;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="instructions">Click to Play</div>
   <canvas id="gameCanvas"></canvas>
 
-  <script type="module">
-    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.module.js';
-    import { PointerLockControls } from 'https://cdn.jsdelivr.net/npm/three@0.152.0/examples/jsm/controls/PointerLockControls.js';
-
-    let camera, scene, renderer, controls;
-    let moveForward = false, moveBackward = false, moveLeft = false, moveRight = false;
-    let velocity = new THREE.Vector3();
-    let prevTime = performance.now();
-
-    init();
-    animate();
-
-    function init() {
-      scene = new THREE.Scene();
-      scene.background = new THREE.Color(0x000000);
-
-      camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 1, 1000);
-      camera.position.set(0, 10, 50);
-
-      renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('gameCanvas') });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-
-      controls = new PointerLockControls(camera, document.body);
-      scene.add(controls.getObject());
-
-      // Lighting
-      const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
-      scene.add(ambientLight);
-      const dirLight = new THREE.DirectionalLight(0xffffff, 1);
-      dirLight.position.set(50, 200, 100);
-      scene.add(dirLight);
-
-      // Floor
-      const floorGeometry = new THREE.PlaneGeometry(2000, 2000);
-      floorGeometry.rotateX(-Math.PI / 2);
-      const floorMaterial = new THREE.MeshPhongMaterial({ color: 0x303030 });
-      const floor = new THREE.Mesh(floorGeometry, floorMaterial);
-      scene.add(floor);
-
-      // Controls lock/unlock handlers
-      const instructions = document.getElementById('instructions');
-      instructions.addEventListener('click', () => {
-        controls.lock();
-      });
-
-      controls.addEventListener('lock', () => {
-        instructions.style.display = 'none';
-      });
-      controls.addEventListener('unlock', () => {
-        instructions.style.display = '';
-      });
-
-      // Keyboard input
-      document.addEventListener('keydown', (event) => {
-        switch(event.code) {
-          case 'ArrowUp':
-          case 'KeyW': moveForward = true; break;
-          case 'ArrowLeft':
-          case 'KeyA': moveLeft = true; break;
-          case 'ArrowDown':
-          case 'KeyS': moveBackward = true; break;
-          case 'ArrowRight':
-          case 'KeyD': moveRight = true; break;
-        }
-      });
-
-      document.addEventListener('keyup', (event) => {
-        switch(event.code) {
-          case 'ArrowUp':
-          case 'KeyW': moveForward = false; break;
-          case 'ArrowLeft':
-          case 'KeyA': moveLeft = false; break;
-          case 'ArrowDown':
-          case 'KeyS': moveBackward = false; break;
-          case 'ArrowRight':
-          case 'KeyD': moveRight = false; break;
-        }
-      });
-
-      window.addEventListener('resize', () => {
-        camera.aspect = window.innerWidth/window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-      });
-    }
-
-    function animate() {
-      requestAnimationFrame(animate);
-
-      const time = performance.now();
-      const delta = (time - prevTime) / 1000;
-
-      velocity.x -= velocity.x * 10.0 * delta;
-      velocity.z -= velocity.z * 10.0 * delta;
-
-      const direction = new THREE.Vector3();
-      direction.z = Number(moveForward) - Number(moveBackward);
-      direction.x = Number(moveRight) - Number(moveLeft);
-      direction.normalize();
-
-      if (moveForward || moveBackward) velocity.z -= direction.z * 400.0 * delta;
-      if (moveLeft || moveRight) velocity.x -= direction.x * 400.0 * delta;
-
-      controls.moveRight(-velocity.x * delta);
-      controls.moveForward(-velocity.z * delta);
-
-      renderer.render(scene, camera);
-      prevTime = time;
-    }
-  </script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
