--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FPS Game</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Three.js CDN読み込み -->
