--- a/index.html
+++ b/index.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FPS with Shooting and AI</title>
-  <style>
-    body { margin: 0; overflow: hidden; }
-    #instructions {
-      position: absolute;
-      top: 50%;
-      width: 100%;
-      text-align: center;
-      color: white;
-      font-family: Arial, sans-serif;
-      font-size: 24px;
-      user-select: none;
-      cursor: pointer;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>FPS Game Demo</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="instructions">
-    クリックしてFPSを開始 (Click to start FPS)
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/PointerLockControls.js"></script>
-  <script src="main.js"></script>
+<div id="instructions">
+  点击屏幕开始控制，WASD移动，鼠标看视角
+</div>
+<script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/PointerLockControls.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
