--- a/index.html
+++ b/index.html
@@ -5,35 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FPS Game Demo</title>
   <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
-    }
-    #blocker {
-      position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 24px;
-      cursor: pointer;
-      user-select: none;
-      z-index: 10;
-    }
+    /* 你的样式 */
   </style>
 </head>
 <body>
+  <div id="blocker">点击屏幕开始控制，WASD移动，鼠标看视角</div>
 
-  <div id="blocker">
-    点击屏幕开始控制，WASD移动，鼠标看视角
-  </div>
+  <script type="module" >
+    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.module.js';
+    import { PointerLockControls } from 'https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/controls/PointerLockControls.js';
 
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/PointerLockControls.js"></script>
-  <script src="main.js"></script>
+    // 你的 main.js 内容，改成模块内写就行
+    let camera, scene, renderer, controls;
+    // ... 你原来的代码 ...
+    
+    function init() {
+      scene = new THREE.Scene();
+      camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+      renderer = new THREE.WebGLRenderer({ antialias: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
 
+      // 贴图加载
+      const loader = new THREE.TextureLoader();
+      // 注意这里图片路径是否正确
+      const wallTexture = loader.load('assets/wall.jpg');
+      const groundTexture = loader.load('assets/ground.jpg');
+      groundTexture.wrapS = groundTexture.wrapT = THREE.RepeatWrapping;
+      groundTexture.repeat.set(10, 10);
+
+      // 其他代码 ...
+      controls = new PointerLockControls(camera, document.body);
+
+      // 你剩下的逻辑
+    }
+
+    init();
+    animate();
+
+    // 你的 animate() 函数等
+  </script>
 </body>
 </html>
