--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/PointerLockControls.js"></script>
 
   <!-- 主程序 -->
-  <script src="main.js"></script>
+ <script type="module" src="main.js"></script>
 </body>
 </html>
