--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FPS Game Demo</title>
+  <title>Three.js PointerLockControls Demo</title>
   <style>
-    body { margin: 0; overflow: hidden; font-family: sans-serif; }
+    body {
+      margin: 0;
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+    }
     #blocker {
       position: absolute;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background-color: rgba(0,0,0,0.7);
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
       display: flex;
       align-items: center;
       justify-content: center;
+      cursor: pointer;
       color: white;
       font-size: 24px;
-      cursor: pointer;
       user-select: none;
-      z-index: 100;
+      z-index: 10;
     }
   </style>
 </head>
 <body>
-  <div id="blocker">
-    点击这里开始控制<br />
-    WASD移动，鼠标看视角，点击射击
-  </div>
+  <div id="blocker">点击屏幕以锁定鼠标，开始游戏</div>
 
-  <!-- THREE.js 核心库 -->
+  <!-- 引入Three.js主库 -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-  <!-- PointerLockControls 控制器 -->
+  <!-- 引入PointerLockControls -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/PointerLockControls.js"></script>
-
-  <!-- 主程序 -->
- <script type="module" src="main.js"></script>
+  <!-- 引入你的主脚本 -->
+  <script src="main.js"></script>
 </body>
 </html>
